# metamutate-ws

./: .gitignore  Cargo.toml  README.md  RocketExample.toml  build.bat  file.json  migrate.bat  run.bat
entity/: Cargo.toml
entity/src/: accounts.rs  history.rs  lib.rs  mod.rs  payments.rs  prelude.rs  seaql_migrations.rs  tasks.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
webserver/: Cargo.toml
webserver/src/: main.rs  pool.rs
webserver/src/handlers/: metadata.rs  mod.rs  payment.rs
webserver/src/models/: metadata.rs  mod.rs
webserver/src/util/: crypto.rs  mod.rs
