[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Crypto
ed25519-dalek = "1"

# Web3 Specific Crates

# Webserver
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Metadata
solana-sdk = "1.10.5"
mpl-token-metadata = "1.2.5"

# Time
chrono = "0.4"

# Database Packages
rbson = "2"
rbatis = { version = "3", default-features = false, features = ["runtime-tokio-native-tls","sqlite"] }

# logging lib(required)
log = "0.4"
fast_log="1"
