[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Crypto
ed25519-dalek = "1.0.1"
bs58 = "0.4.0"

# Web3 Specific Crates

# Webserver
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }

# Metadata
metaboss = "0.6.0"
rand = "0.8.5"
retry = "1.3.1"
solana-program = "1.10.8"
solana-client = "1.10.8"
solana-sdk = "1.10.8"
mpl-token-metadata = "1.2.5"

# Time
chrono = "0.4"

# Database Packages
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
sea-orm-rocket = "0.5.0"

# logging lib(required)
log = "0.4"
fast_log="1"

migration = { path = "../migration" }
entity = { path = "../entity" }
